<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actions.quiz.StartQuiz"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="285dp"
        android:background="@drawable/back_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setupQuiz"
        android:layout_width="359dp"
        android:layout_height="56dp"
        android:layout_marginTop="189dp"
        android:background="@drawable/read_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/records"
        android:layout_width="359dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/see_records"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupQuiz" />
</androidx.constraintlayout.widget.ConstraintLayout>