<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/startMoonImage"
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moon" />

    <ImageView
        android:id="@+id/startPhobusImage"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/flashCards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/phobus" />

    <ImageView
        android:id="@+id/startGanymedeImage"
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ganymede" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviewer"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginTop="102dp"
        android:background="@drawable/edit_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/option1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flashCards"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/option2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quiz"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_buttons"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/option3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashCards"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>